feat: profile block

--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
       <img class="header__logo" src="./images/logo.svg" alt="Logo">
     </header>
 
-    <main></main>
+    <main class="content">
+      <section class="profile">
+        <img class="profile__image" src="./images/Jacques Cousteau.jpg" alt="Profile Picture">
+        <div class="profile__content">
+          <div class="profile__details">
+            <h1 class="profile__name">Jacques Cousteau</h1>
+            <button class="profile__edit" type="button" aria-label="edit button"></button>
+          </div>
+          <p class="profile__occupation">Explorer</p>
+        </div>
+        <button class="profile__add" type="button" aria-label="add button"></button>
+      </section>
+    </main>
 
     <footer class="footer">
       <p class="footer__author">&copy; 2021 Around The U.S.</p>
