feat: elements block

--- a/index.html
+++ b/index.html
@@ -27,6 +27,55 @@
         </div>
         <button class="profile__add" type="button" aria-label="add button"></button>
       </section>
+
+      <section class="elements">
+        <ul class="elements__container">
+          <li class="elements__item">
+            <img class="elements__image" src="./images/Yosemite-Valley.jpg" alt="Yosemite Valley">
+            <div class="elements__heading">
+              <h2 class="elements__title">Yosemite Valley</h2>
+              <button class="elements__like" type="button" aria-label="like button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img class="elements__image" src="./images/Lake-Louise.png" alt="Lake Louise">
+            <div class="elements__heading">
+              <h2 class="elements__title">Lake Louise</h2>
+              <button class="elements__like" type="button" aria-label="like button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img class="elements__image" src="./images/Bald-Mountains.png" alt="Bald Mountains">
+            <div class="elements__heading">
+              <h2 class="elements__title">Bald Mountains</h2>
+              <button class="elements__like" type="button" aria-label="like button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img class="elements__image" src="./images/Latemar.png" alt="Latemar">
+            <div class="elements__heading">
+              <h2 class="elements__title">Latemar</h2>
+              <button class="elements__like" type="button" aria-label="like button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img class="elements__image" src="./images/Vanoise.png" alt="Vanoise National Park">
+            <div class="elements__heading">
+              <h2 class="elements__title">Vanoise National Park</h2>
+              <button class="elements__like" type="button" aria-label="like button"></button>
+            </div>
+          </li>
+          <li class="elements__item">
+            <img class="elements__image" src="./images/Lago-di-Braies.png" alt="Lago di Braies">
+            <div class="elements__heading">
+              <h2 class="elements__title">Lago di Braies</h2>
+              <button class="elements__like" type="button" aria-label="like button"></button>
+            </div>
+          </li>
+        </ul>
+      </section>
+
+
     </main>
 
     <footer class="footer">
