--- a/index.html
+++ b/index.html
@@ -81,8 +81,22 @@
     <footer class="footer">
       <p class="footer__author">&copy; 2021 Around The U.S.</p>
     </footer>
+
+    <div class="modal">
+      <div class="modal__container">
+        <button class="modal__close-button" type="button" aria-label="close button"></button>
+        <form class="modal__form" method="POST" action="#" name="editProfile">
+          <h3 class="modal__title">Edit profile</h3>
+          <input  class="modal__form-control modal__form-control_input_name" type="text" placeholder="Name" name="profileNameInput">
+          <input class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput">
+          <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
+        </form>
+      </div>
+    </div>
+
   </div>
 
+  
   <script src="./scripts/script.js"></script>
 </body>
 </html>
