--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="modal">
       <div class="modal__container">
         <h3 class="modal__title">Edit profile</h3>
-        <form class="modal__form" method="POST" action="#" name="editProfile">
+        <form class="modal__form" name="editProfile">
           <input  class="modal__form-control modal__form-control_input_name" type="text" placeholder="Name" name="profileNameInput">
           <input class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput">
           <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
