fix: modal styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main class="content">
       <section class="profile">
-        <img class="profile__image" src="./images/Jacques Cousteau.jpg" alt="Profile Picture">
+        <img class="profile__image" src="./images/Jacques-Cousteau.jpg" alt="Profile Picture">
         <div class="profile__content">
           <div class="profile__details">
             <h1 class="profile__name">Jacques Cousteau</h1>
@@ -86,8 +86,8 @@
       <div class="modal__container">
         <h3 class="modal__title">Edit profile</h3>
         <form class="modal__form" name="editProfile">
-          <input  class="modal__form-control modal__form-control_input_name" type="text" placeholder="Name" name="profileNameInput">
-          <input class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput">
+          <input  class="modal__form-control modal__form-control_input_name" type="text" placeholder="Name" name="profileNameInput" required>
+          <input class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput" required>
           <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
         </form>
         <button class="modal__close-button" type="button" aria-label="close button"></button>
