fix: rename all images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main class="content">
       <section class="profile">
-        <img class="profile__image" src="./images/Jacques-Cousteau.jpg" alt="Profile Picture">
+        <img class="profile__image" src="./images/jacquescousteau.jpg" alt="Profile Picture">
         <div class="profile__content">
           <div class="profile__details">
             <h1 class="profile__name">Jacques Cousteau</h1>
@@ -31,42 +31,42 @@
       <section class="elements">
         <ul class="elements__container">
           <li class="elements__item">
-            <img class="elements__image" src="./images/Yosemite-Valley.jpg" alt="Yosemite Valley">
+            <img class="elements__image" src="./images/yosemite.jpg" alt="Yosemite Valley">
             <div class="elements__heading">
               <h2 class="elements__title">Yosemite Valley</h2>
               <button class="elements__like" type="button" aria-label="like button"></button>
             </div>
           </li>
           <li class="elements__item">
-            <img class="elements__image" src="./images/Lake-Louise.png" alt="Lake Louise">
+            <img class="elements__image" src="./images/lakelouise.png" alt="Lake Louise">
             <div class="elements__heading">
               <h2 class="elements__title">Lake Louise</h2>
               <button class="elements__like" type="button" aria-label="like button"></button>
             </div>
           </li>
           <li class="elements__item">
-            <img class="elements__image" src="./images/Bald-Mountains.png" alt="Bald Mountains">
+            <img class="elements__image" src="./images/baldmountains.png" alt="Bald Mountains">
             <div class="elements__heading">
               <h2 class="elements__title">Bald Mountains</h2>
               <button class="elements__like" type="button" aria-label="like button"></button>
             </div>
           </li>
           <li class="elements__item">
-            <img class="elements__image" src="./images/Latemar.png" alt="Latemar">
+            <img class="elements__image" src="./images/latemar.png" alt="Latemar">
             <div class="elements__heading">
               <h2 class="elements__title">Latemar</h2>
               <button class="elements__like" type="button" aria-label="like button"></button>
             </div>
           </li>
           <li class="elements__item">
-            <img class="elements__image" src="./images/Vanoise.png" alt="Vanoise National Park">
+            <img class="elements__image" src="./images/vanoise.png" alt="Vanoise National Park">
             <div class="elements__heading">
               <h2 class="elements__title">Vanoise National Park</h2>
               <button class="elements__like" type="button" aria-label="like button"></button>
             </div>
           </li>
           <li class="elements__item">
-            <img class="elements__image" src="./images/Lago-di-Braies.png" alt="Lago di Braies">
+            <img class="elements__image" src="./images/lagodibraies.png" alt="Lago di Braies">
             <div class="elements__heading">
               <h2 class="elements__title">Lago di Braies</h2>
               <button class="elements__like" type="button" aria-label="like button"></button>
