--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <form class="modal__form" name="create-form">
           <h3 class="modal__title">New Place</h3>
           <input class="modal__form-control modal__form-control_input_title" type="text" placeholder="Title" name="titleInput" required>
-          <input class="modal__form-control modal__form-control_input_image" type="text" placeholder="Image Link" name="imageLinkInput" required>
+          <input class="modal__form-control modal__form-control_input_image" type="url" placeholder="Image Link" name="imageLinkInput" required>
           <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
         </form>
         <button class="modal__close-button modal__close-button_place" type="button" aria-label="close button"></button>
