--- a/index.html
+++ b/index.html
@@ -63,10 +63,20 @@
       </div>
     </div>
 
+    <div class="modal modal_type_image">
+      <div class="modal__container modal__container_type_image">
+        <button class="modal__close-button  modal__close-button_image" type="button" aria-label="close button"></button>
+        <figure>
+          <img class="modal__image" src="#" alt="">
+          <figcaption class="modal__image-title"></figcaption>
+        </figure>
+      </div>
+    </div>
+
     <template class="card-template">
         <li class="elements__item">
           <img class="elements__image" src="#" alt="Place image">
-          <button class="delete-button" type="button" aria-label="delete button"></button>
+          <button class="elements__delete-button" type="button" aria-label="delete button"></button>
           <div class="elements__heading">
             <h2 class="elements__title"></h2>
             <button class="elements__like" type="button" aria-label="like button"></button>
