fix preview image close button

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
     <div class="modal modal_type_preview">
       <div class="modal__container modal__container_preview">
         <button class="modal__close-button  modal__close-button_preview" type="button" aria-label="close button"></button>
-        <img class="modal__image" src="#" alt="">
-        <p class="modal__image-title"></p>
+        <figure>
+          <img class="modal__image" src="#" alt="">
+          <figcaption class="modal__image-title"></figcaption>
+        </figure>
       </div>
     </div>
 
