fix practicum platform submit error

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </div>
         </li>
     </template>
-    
+  </div>  
   <script src="./scripts/script.js"></script>
 </body>
 </html>
