fix practicum platform submit errors

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
         <button class="profile__add" type="button" aria-label="add button"></button>
       </section>
 
-      <section>
-        <ul class="elements__container"></ul>
+      <section class="elements__section">
+        <ul class="elements__container">
+        </ul>
       </section>
 
     </main>
@@ -67,7 +68,7 @@
       <div class="modal__container modal__container_preview">
         <button class="modal__close-button  modal__close-button_preview" type="button" aria-label="close button"></button>
         <figure>
-          <img class="modal__image" src="#" alt="">
+          <img class="modal__image" src="#" alt=" ">
           <figcaption class="modal__image-title"></figcaption>
         </figure>
       </div>
