--- a/index.html
+++ b/index.html
@@ -28,12 +28,10 @@
         </div>
         <button class="profile__add" type="button" aria-label="add button"></button>
       </section>
-
-      <section class="elements__section">
+      <section class="elements">
         <ul class="elements__container">
         </ul>
       </section>
-
     </main>
 
     <footer class="footer">
