--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
     <div class="modal modal_type_edit">
       <div class="modal__container">
-        <form class="modal__form edit-form" name="edit-profile">
+        <form class="modal__form modal__form_type_profile" name="edit-profile">
           <h3 class="modal__title">Edit profile</h3>
           <input  class="modal__form-control modal__form-control_input_name" type="text" placeholder="Name" name="profileNameInput" required>
           <input class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput" required>
           <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
         </form>
-        <button class="modal__close-button" type="button" aria-label="close button"></button>
+        <button class="modal__close-button modal__close-button_profile" type="button" aria-label="close button"></button>
       </div>
     </div>
 
@@ -66,7 +66,7 @@
       <div class="modal__container modal__container_preview">
         <button class="modal__close-button  modal__close-button_preview" type="button" aria-label="close button"></button>
         <figure>
-          <img class="modal__image" src="#" alt=" ">
+          <img class="modal__image" src="#" alt="Preview of the place image">
           <figcaption class="modal__image-title"></figcaption>
         </figure>
       </div>
@@ -83,6 +83,6 @@
         </li>
     </template>
   </div>  
-  <script src="./scripts/script.js"></script>
+  <script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
