fix: review comments

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="modal__container modal__container_preview">
         <button class="modal__close-button  modal__close-button_preview" type="button" aria-label="close button"></button>
         <figure>
-          <img class="modal__image" src="#" alt="Preview of the place image">
+          <img class="modal__image" src="#" alt=" ">
           <figcaption class="modal__image-title"></figcaption>
         </figure>
       </div>
