--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="modal__container">
         <form class="modal__form modal__form_type_profile" name="edit-profile">
           <h3 class="modal__title">Edit profile</h3>
-          <input  class="modal__form-control modal__form-control_input_name" type="text" placeholder="Name" name="profileNameInput" required>
+          <input  id="profileName" class="modal__form-control modal__form-control_input_name" type="text" placeholder="Name" name="profileNameInput" required minlength="2" maxlength="40" >
           <span id="profileName-error" class="modal__error"></span>
-          <input class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput" required>
+          <input id="profileOccupation" class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput" required  minlength="2" maxlength="200">
           <span id="profileOccupation-error" class="modal__error"></span>
-          <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
+          <button class="modal__form-submit modal__form-submit_disabled" type="submit" aria-label="save button">Save</button>
         </form>
         <button class="modal__close-button modal__close-button_profile" type="button" aria-label="close button"></button>
       </div>
@@ -56,11 +56,11 @@
       <div class="modal__container">
         <form class="modal__form addCard-form" name="create-form">
           <h3 class="modal__title">New Place</h3>
-          <input class="modal__form-control modal__form-control_input_title" type="text" placeholder="Title" name="titleInput" required>
-          <span id="newPlaceTitle" class="modal__errorr"></span>
-          <input class="modal__form-control modal__form-control_input_image" type="url" placeholder="Image Link" name="imageLinkInput" required>
-          <span id="newPlaceLink" class="modal__error"></span>
-          <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
+          <input id="placeTitle" class="modal__form-control modal__form-control_input_title" type="text" placeholder="Title" name="titleInput" required minlength="1" maxlength="30">
+          <span id="placeTitle-error" class="modal__error"></span>
+          <input id="placeLink" class="modal__form-control modal__form-control_input_image" type="url" placeholder="Image Link" name="imageLinkInput" required>
+          <span id="placeLink-error" class="modal__error"></span>
+          <button class="modal__form-submit modal__form-submit_disabled" type="submit" aria-label="save button">Create</button>
         </form>
         <button class="modal__close-button modal__close-button_place" type="button" aria-label="close button"></button>
       </div>
