Fixed review errors

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <span id="profileName-error" class="modal__error"></span>
           <input id="profileOccupation" class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput" required  minlength="2" maxlength="200">
           <span id="profileOccupation-error" class="modal__error"></span>
-          <button class="modal__form-submit modal__form-submit_disabled" type="submit" aria-label="save button">Save</button>
+          <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
         </form>
         <button class="modal__close-button modal__close-button_profile" type="button" aria-label="close button"></button>
       </div>
@@ -60,7 +60,7 @@
           <span id="placeTitle-error" class="modal__error"></span>
           <input id="placeLink" class="modal__form-control modal__form-control_input_image" type="url" placeholder="Image Link" name="imageLinkInput" required>
           <span id="placeLink-error" class="modal__error"></span>
-          <button class="modal__form-submit modal__form-submit_disabled" type="submit" aria-label="save button">Create</button>
+          <button class="modal__form-submit" type="submit" aria-label="save button">Create</button>
         </form>
         <button class="modal__close-button modal__close-button_place" type="button" aria-label="close button"></button>
       </div>
