--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="pages/index.css">
   <title>Around The U.S.</title>
 </head>
 
@@ -12,13 +11,13 @@
 
   <div>
     <header class="header">
-      <img class="header__logo" src="./images/logo.svg" alt="Logo">
+      <img class="header__logo" src="<%=require('./images/logo.svg')%>" alt="Logo">
     </header>
 
     <main class="content">
 
       <section class="profile">
-        <img class="profile__image" src="./images/jacquescousteau.jpg" alt="Profile Picture">
+        <img class="profile__image" src="<%=require('./images/jacquescousteau.jpg')%>" alt="Profile Picture">
         <div class="profile__content">
           <div class="profile__details">
             <h1 class="profile__name">Jacques Cousteau</h1>
