initial cards loading

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
         <img class="profile__image" src="<%=require('./images/jacquescousteau.jpg')%>" alt="Profile Picture">
         <div class="profile__content">
           <div class="profile__details">
-            <h1 class="profile__name">Jacques Cousteau</h1>
+            <h1 class="profile__name"></h1>
             <button type="button" aria-label="edit button" class="profile__edit"></button>
           </div>
-          <p class="profile__occupation">Explorer</p>
+          <p class="profile__occupation"></p>
         </div>
         <button class="profile__add" type="button" aria-label="add button"></button>
       </section>
@@ -99,6 +99,6 @@
           </div>
         </li>
     </template>
-  </div> 
+  </div>
 </body>
 </html>
