popup with image

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
 
-    <div class="modal modal_type_create">
+    <div class="popup modal modal_type_create">
       <div class="modal__container">
         <form class="modal__form addCard-form" method = "POST" name="create-form">
           <h3 class="modal__title">New Place</h3>
@@ -68,7 +68,7 @@
 
     
 
-    <div class="modal modal_type_deleteConfirmation">
+    <div class="popup modal modal_type_deleteConfirmation">
       <div class="modal__container modal__container_type_delete">
         <form class="modal__form">
           <h3 class="modal__title modal__title_type_delete">Are you sure?</h3>
@@ -78,7 +78,7 @@
       </div>
     </div>
 
-    <div class="modal modal_type_preview">
+    <div class="popup modal modal_type_preview">
       <div class="modal__container modal__container_preview">
         <button class="modal__close-button  modal__close-button_preview" type="button" aria-label="close button"></button>
         <figure>
