--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,9 @@
       </div>
     </div>
 
-    <div class="popup modal modal_type_create">
+    <div class="modal modal_type_create">
       <div class="modal__container">
-        <form class="modal__form addCard-form" method = "POST" name="create-form">
+        <form class="modal__form addCard-form" name="create-form">
           <h3 class="modal__title">New Place</h3>
           <input id="placeTitle" class="modal__form-control modal__form-control_input_title" type="text" placeholder="Title" name="titleInput" required minlength="1" maxlength="30">
           <span id="placeTitle-error" class="modal__error"></span>
@@ -68,7 +68,7 @@
 
     
 
-    <div class="popup modal modal_type_deleteConfirmation">
+    <div class="modal modal_type_deleteConfirmation">
       <div class="modal__container modal__container_type_delete">
         <form class="modal__form">
           <h3 class="modal__title modal__title_type_delete">Are you sure?</h3>
