--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,15 @@
     </header>
 
     <main class="content">
-    
+
       <section class="profile">
         <img class="profile__image" src="<%=require('./images/jacquescousteau.jpg')%>" alt="Profile Picture">
         <div class="profile__content">
           <div class="profile__details">
-            <h1 class="profile__name"></h1>
+            <h1 class="profile__name">Jacques Cousteau</h1>
             <button type="button" aria-label="edit button" class="profile__edit"></button>
           </div>
-          <p class="profile__occupation"></p>
+          <p class="profile__occupation">Explorer</p>
         </div>
         <button class="profile__add" type="button" aria-label="add button"></button>
       </section>
@@ -33,7 +33,6 @@
       </section>
     </main>
 
-
     <footer class="footer">
       <p class="footer__author">&copy; 2021 Around The U.S.</p>
     </footer>
@@ -42,13 +41,16 @@
       <div class="modal__container">
         <form class="modal__form modal__form_type_profile" name="edit-profile">
           <h3 class="modal__title">Edit profile</h3>
-          <input  id="profileName" class="modal__form-control modal__form-control_input_name" type="text" placeholder="Name" name="profileNameInput" required minlength="2" maxlength="40" >
+          <input id="profileName" class="modal__form-control modal__form-control_input_name" type="text"
+            placeholder="Name" name="profileNameInput" required minlength="2" maxlength="40">
           <span id="profileName-error" class="modal__error"></span>
-          <input id="profileOccupation" class="modal__form-control modal__form-control_input_occupation" type="text" placeholder="Occupation" name="profileOccupationInput" required  minlength="2" maxlength="200">
+          <input id="profileOccupation" class="modal__form-control modal__form-control_input_occupation" type="text"
+            placeholder="Occupation" name="profileOccupationInput" required minlength="2" maxlength="200">
           <span id="profileOccupation-error" class="modal__error"></span>
           <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
         </form>
-        <button class="modal__close-button modal__close-button_profile" type="button" aria-label="close button"></button>
+        <button class="modal__close-button modal__close-button_profile" type="button"
+          aria-label="close button"></button>
       </div>
     </div>
 
@@ -56,19 +58,22 @@
       <div class="modal__container">
         <form class="modal__form addCard-form" name="create-form">
           <h3 class="modal__title">New Place</h3>
-          <input id="placeTitle" class="modal__form-control modal__form-control_input_title" type="text" placeholder="Title" name="titleInput" required minlength="1" maxlength="30">
+          <input id="placeTitle" class="modal__form-control modal__form-control_input_title" type="text"
+            placeholder="Title" name="titleInput" required minlength="1" maxlength="30">
           <span id="placeTitle-error" class="modal__error"></span>
-          <input id="placeLink" class="modal__form-control modal__form-control_input_image" type="url" placeholder="Image Link" name="imageLinkInput" required>
+          <input id="placeLink" class="modal__form-control modal__form-control_input_image" type="url"
+            placeholder="Image Link" name="imageLinkInput" required>
           <span id="placeLink-error" class="modal__error"></span>
-          <button class="modal__form-submit save-btn" type="submit" aria-label="save button">Create</button>
+          <button class="modal__form-submit" type="submit" aria-label="save button">Create</button>
         </form>
         <button class="modal__close-button modal__close-button_place" type="button" aria-label="close button"></button>
       </div>
     </div>
 
-    <div class="popup modal modal_type_preview">
+    <div class="modal modal_type_preview">
       <div class="modal__container modal__container_preview">
-        <button class="modal__close-button  modal__close-button_preview" type="button" aria-label="close button"></button>
+        <button class="modal__close-button  modal__close-button_preview" type="button"
+          aria-label="close button"></button>
         <figure>
           <img class="modal__image" src="#" alt=" ">
           <figcaption class="modal__image-title"></figcaption>
@@ -77,14 +82,16 @@
     </div>
 
     <template class="card-template">
-        <li class="elements__item">
-          <img class="elements__image" src="#" alt="Place image">
-          <button class="elements__delete-button" type="button" aria-label="delete button"></button>
-          <div class="elements__heading">
-            <h2 class="elements__title"></h2>
-          </div>
-        </li>
+      <li class="elements__item">
+        <img class="elements__image" src="#" alt="Place image">
+        <button class="elements__delete-button" type="button" aria-label="delete button"></button>
+        <div class="elements__heading">
+          <h2 class="elements__title"></h2>
+          <button class="elements__like" type="button" aria-label="like button"></button>
+        </div>
+      </li>
     </template>
   </div>
 </body>
+
 </html>
