--- a/src/index.html
+++ b/src/index.html
@@ -94,10 +94,10 @@
 
     <div class="modal modal_type_avatar">
       <div class="modal__container">
-        <form class="modal__form addCard-form" name="create-form">
+        <form class="modal__form modal__form_type_avatar" name="avatar-form">
           <h3 class="modal__title">Change profile picture</h3>
           <input id="avatar-url" class="modal__form-control modal__form-control_avatar" type="url"
-            placeholder="Image Link" name="link" required>
+            placeholder="Image Link" name="avatar-link" required>
           <span id="avatar-url-error" class="modal__error"></span>
           <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
         </form>
