--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
         <form class="modal__form modal__form_type_avatar" name="avatar-form">
           <h3 class="modal__title">Change profile picture</h3>
           <input id="avatar-url" class="modal__form-control modal__form-control_avatar" type="url"
-            placeholder="Image Link" name="avatar-link" required>
+            placeholder="Image Link" name="avatarInput" required>
           <span id="avatar-url-error" class="modal__error"></span>
           <button class="modal__form-submit" type="submit" aria-label="save button">Save</button>
         </form>
