--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
       <div class="modal__container">
         <form class="modal__form modal__form_type_delete" name="delete-confirmation" novalidate>
           <h2 class="modal__delete-title">Are you sure?</h2>
-          <button class="modal__form-submit" type="button">Yes</button>
+          <button class="modal__form-submit modal__form-delete" type="button">Yes</button>
         </form>
         <button class="modal__close-button modal__close-button_delete" type="button" aria-label="close button"></button>
       </div>
