Add like counter functionality

--- a/src/index.html
+++ b/src/index.html
@@ -112,6 +112,7 @@
         <div class="elements__heading">
           <h2 class="elements__title"></h2>
           <button class="elements__like" type="button" aria-label="like button"></button>
+          <p class="elements__like-counter"></p>
         </div>
       </li>
     </template>
