--- a/src/index.html
+++ b/src/index.html
@@ -111,8 +111,10 @@
         <button class="elements__delete-button" type="button" aria-label="delete button"></button>
         <div class="elements__heading">
           <h2 class="elements__title"></h2>
-          <button class="elements__like" type="button" aria-label="like button"></button>
-          <p class="elements__like-counter"></p>
+          <div class="elements__like-container">
+            <button class="elements__like" type="button" aria-label="like button"></button>
+            <p class="elements__like-counter"></p>
+          </div>
         </div>
       </li>
     </template>
