Update styles for avatar

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,8 @@
     <main class="content">
 
       <section class="profile">
+        <div class="profile__image-edit"></div>
         <img class="profile__image" src="#" alt="Profile Picture">
-        <img class="profile__image-edit" src="<%=require('./images/edit.svg')%>" alt="Edit Avatar Button">
         <div class="profile__content">
           <div class="profile__details">
             <h1 class="profile__name"></h1>
