Add  styles for new modals

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
     <div class="modal modal_type_delete">
       <div class="modal__container">
         <form class="modal__form modal__form_type_delete" name="delete-confirmation" novalidate>
-          <h2 class="modal__delete-title">Are you sure?</h2>
+          <h3 class="modal__title modal__title_type_delete">Are you sure?</h2>
           <button class="modal__form-submit modal__form-delete" type="submit">Yes</button>
         </form>
         <button class="modal__close-button modal__close-button_delete" type="button" aria-label="close button"></button>
